--- a/phase2.html
+++ b/phase2.html
@@ -80,7 +80,7 @@
           <div class="date">10 JUL 2020</div>
           <p>Among the 31 contested electoral divisions, there were 17 GRCs and 14 SMCs.
           </p>
-          <img src="https://1.bp.blogspot.com/-gJ2ISkqJNms/XwmImiTPDoI/AAAAAAAAzH4/CE3r_htGzB0zbf2bKXHK-EjzwYSjefUIgCLcBGAsYHQ/s640/Singapore-GE2020-results-Peoples-Action-Party-83-seats-and-Workers-Party-10-seats-CNA-photo.png" width="100%"></img>
+          <img class="images" src="https://1.bp.blogspot.com/-gJ2ISkqJNms/XwmImiTPDoI/AAAAAAAAzH4/CE3r_htGzB0zbf2bKXHK-EjzwYSjefUIgCLcBGAsYHQ/s640/Singapore-GE2020-results-Peoples-Action-Party-83-seats-and-Workers-Party-10-seats-CNA-photo.png" width="100%"></img>
         </div>
       </div>
 
@@ -181,7 +181,7 @@
           <h2>Charging policy for SHN revised</h2>
           <div class="date">27 OCT 2020</div>
           <p>TThe Ministry of Health announced that from 1 January 2021, the government will not pay for the costs for Singaporeans and permanent residents who last left Singapore before 27 March 2020 to stay at dedicated stay-home notice facilities.</p>
-		  <img class="images" src="/imgs/charging-policy.jpg"></img><p></p>
+		  <img class="images" src="../imgs/charging-policy.jpg"></img><p></p>
           <a class="bnt-more" href="https://www.gov.sg/article/cost-of-shn-stays-swab-tests-and-medical-expenses-when-you-travel" target="_blank">More</a>
         </div>
       </div>
